--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,17 @@
       <nav>
         <a href="{{ url_for('cart') }}">Cart</a>
         <a href="{{ url_for('admin') }}">Admin</a>
+      <br>
+        <hr>
+<div style="text-align:center; margin-top:20px;">
+  <p>
+    📞 Contact us: <strong>{{ WHATSAPP_NUMBER }}</strong><br><br>
+    <a href="https://wa.me/{{ WHATSAPP_NUMBER }}" target="_blank" 
+       style="background:#25d366; color:white; padding:10px 10px; border-radius:8px; text-decoration:none;"><br><br>
+       💬 Order on WhatsApp
+    </a>
+  </p>
+</div>
       </nav>
     </div>
   </header>
